Fix issue where static content was being covered by the homepage header

--- a/Site/webapp/wdkCustomization/css/client.scss
+++ b/Site/webapp/wdkCustomization/css/client.scss
@@ -106,7 +106,8 @@ td.wdk-DataTableCell__thumbnail {
 .wdk-RecordAttributeSectionItem:before,
 .wdk-RecordTableContainer:before,
 .wdk-RecordSubsection:before,
-.wdk-RecordSection:before {
+.wdk-RecordSection:before,
+.ExternalContentController a[name]::before {
   content: '';
   display: block;
   height: 68px;
